# aloha-agilex

./: CMakeLists.txt  README.md  package.xml  readme.md  requirements.txt
act/: aloha_inference-ros2.py  aloha_inference.py  aloha_train.py  model_dict_mapping.py  multi_pika_inference-ros2.py  multi_pika_inference.py  multi_pika_train.py  policy.py  single_pika_inference-ros2.py  single_pika_inference.py  single_pika_train.py  utils.py
act/detr/models/: __init__.py  backbone.py  detr_vae.py  transformer.py
act/detr/rdt/: blocks.py  model.py
diffusion/: conditional_unet1d.py  mask_generator.py  simple_conditional_unet1d.py
pointnet2/: README.md
robomimic/algo/: diffusion_policy.py
robomimic/utils/: log_utils.py
scripts/: piper_FK-ros2.py  piper_FK.py  piper_IK-ros2.py  piper_IK.py
